kubernetes/k8s/cloudwatch-logging.yml
apiVersion: v1
kind: Namespace
metadata:
  name: aws-observability
  labels:
    aws-observability: enabled
