kubernetes/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drupal-app
  namespace: bincom-drupal
  labels:
    app: drupal
  # Scales out to multiple pods across your cluster node group
spec:
  replicas: 2
  selector:
    matchLabels:
      app: drupal
  template:
    metadata:
      labels:
        app: drupal
    spec:
      containers:
      - name: drupal
        image: solomonlib/bincom-drupal:v1 # Replace with your pushed image tag
        ports:
        - name: http
          containerPort: 80
        readinessProbe:
          httpGet:
            path: /core/misc/drupal.js
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /core/misc/drupal.js
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 20
