kubernetes/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: drupal
  namespace: bincom-drupal
  labels:
    app: drupal
spec:
  type: ClusterIP
  selector:
    app: drupal
  ports:
    - name: http
      port: 80
      targetPort: http
